--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
 
     repositories {
         maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.2' }
-        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -17,7 +17,7 @@ apply plugin: 'kotlin'
 
 repositories {
     maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.2' }
-    mavenCentral()
+    jcenter()
 }
 
 sourceSets {
@@ -28,6 +28,7 @@ sourceSets {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile group: 'org.ow2.asm', name: 'asm-debug-all', version: '5.2'
 }
 
 compileKotlin {
