Annotate origins with compats.

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 buildscript {
-    ext.kotlin_version = '1.2.0-beta-31'
+    ext.kotlin_version = '1.1.51'
 
     repositories {
-        maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.2' }
         jcenter()
     }
     dependencies {
@@ -16,7 +15,6 @@ version '1.0-SNAPSHOT'
 apply plugin: 'kotlin'
 
 repositories {
-    maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.2' }
     jcenter()
 }
 
